fixed dependency versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-pandas
-scikit-learn
-nltk
-streamlit
+streamlit==1.29.0
+altair==4.2.2
+scikit-learn==1.3.2
+pandas==2.2.2
+numpy==1.26.4
+nltk==3.8.1
+
